<resources>
    <string name="app_name">Mozi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_movies">Movies</string>
    <string name="menu_shows">Shows</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_add_show">Add Show</string>
    <string name="menu_add_movie">Add Movie</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="tickets">Tickets</string>
    <string name="menu_tickets">Tickets</string>
    <string name="forgot_password">Forgot password</string>
    <string name="book">Book</string>
    <string name="update">Update</string>
</resources>